hphp/hack/test/typecheck/references/call_time_reference3.php.exp
File "call_time_reference3.php", line 4, characters 10-10:
An expression is expected here. (Parsing[1002])
